k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fover-backend
  labels:
    app: fover-backend
