k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fover-backend-service
  namespace: fover-backend
  labels:
    app: fover-backend
spec:
  type: ClusterIP
  selector:
    app: fover-backend
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: http
