k8s/worker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fover-backend-worker-service
  namespace: fover-backend
  labels:
    app: fover-backend-worker
spec:
  type: ClusterIP
  selector:
    app: fover-backend-worker
  ports:
    - port: 8001
      targetPort: 8001
      protocol: TCP
      name: metrics
